
5.26  2014-08-09
  - Improved WebSocket performance.
  - Fixed proxy exception handling bug in Mojo::UserAgent.

5.25  2014-08-07
  - Added reduce method to Mojo::Collection. (sri, batman)
  - Added if_none_match method to Mojo::Headers.
  - Added is_fresh method to Mojolicious::Static.
  - Added is_fresh helper to Mojolicious::Plugin::DefaultHelpers.
  - Improved Mojolicious to use MyApp::Controller namespace by default and
    encourage its use in the documentation.
  - Improved sort method in Mojo::Collection to use $a and $b. (batman)
  - Improved Mojolicious::Static to support ETag and If-None-Match headers.
  - Improved documentation browser CSS.
  - Fixed escaping bugs in Mojo::DOM::CSS.

5.24  2014-08-02
  - Improved url_escape performance slightly.
  - Fixed memory leak in Mojo::IOLoop::Client.
  - Fixed bug where ojo would sometimes die silently.

5.23  2014-07-31
  - Improved router performance.
  - Improved routes command to show format regular expression separately.
  - Fixed partial route bug in Mojolicious::Routes::Match.
  - Fixed format detection bug in Mojolicious::Routes::Pattern.

5.22  2014-07-30
  - Added SOCKS5 support to Mojo::UserAgent.
  - Added socks_address, socks_pass, socks_port and socks_user options to
    Mojo::IOLoop::Client::connect.
  - Improved documentation browser CSS.

5.21  2014-07-27
  - Improved handling of Pod::Simple::XHTML 3.09 dependency.
  - Improved documentation browser CSS.

5.20  2014-07-27
  - Fixed a few bugs in Mojolicious::Plugin::PODRenderer by switching from
    Pod::Simple::HTML to Pod::Simple::XHTML.
  - Fixed Perl 5.18.x compatibility.

5.19  2014-07-26
  - Improved support for Unicode anchors in Mojolicious::Plugin::PODRenderer.
  - Fixed is_readable scalability problems in Mojo::Reactor.

5.18  2014-07-25
  - Improved is_readable performance in Mojo::Reactor.

5.17  2014-07-24
  - Welcome to the Mojolicious core team Jan Henning Thorsen.
  - Added val method to Mojo::DOM. (batman, sri)